# lura_plugins

./: READMD.md  README.md  pyproject.toml  setup.py
plugins/annotate/: __init__.py  annotate.py  annotations.py  main.py
plugins/autosave/: __init__.py  main.py
plugins/bookmark/: __init__.py  main.py
plugins/card/: __init__.py  main.py
plugins/documents/: __init__.py  documents.py
plugins/files/: main.py
plugins/jumper/: __init__.py  main.py
plugins/links/: __init__.py  main.py
plugins/lookup/: __init__.py  main.py
plugins/metadata/: __init__.py  main.py
plugins/outline/: __init__.py  main.py
plugins/parts/: __init__.py  main.py  widget.py
plugins/quickmark/: __init__.py  main.py
plugins/search/: main.py
src/annotate/: __init__.py  annotations.py  config.toml  main.py  main_back.py  main_li.py  widget.py
src/annotate_list/: main.py  widget.py
src/annotations/: __init__.py  config.toml  main.py  main.py_
src/autosave/: __init__.py  main.py
src/bookmark/: __init__.py  main.py
src/bookmarks/: __init__.py  main.py  main.py_
src/card/: __init__.py  main.py  main_back.py
src/documents/: __init__.py  main.py
src/leaper/: __init__.py  main.py  utils.py
src/links/: __init__.py  main.py
src/links_todo/: __init__.py  main.py
src/metadata/: main.py  requirements.txt
src/modes/normal/: main.py
src/modes/search/: main.py
src/normal/: main.py
src/outline/: __init__.py  main.py  model.py  view.py
src/parts/: main.py  widget.py
src/plugs/documents/: __init__.py  documents.py  main.py  pyproject.toml
src/plugs/jumper/: __init__.py  main.py  pyproject.toml
src/plugs/parts/: __init__.py  main.py  pyproject.toml  requirements.txt  widget.py
src/plugs/quickmark/: __init__.py  main.py  pyproject.toml
src/quickmark/: __init__.py  main.py
src/quickmarks/: __init__.py  main.py  model.py  utils.py  view.py
src/quickmarks_view/: __init__.py  main.py
src/search/: __init__.py  back.py  main.py
src/search_list/: main.py  widget.py
src/visual/: __init__.py  main.py  main.py_
tests/: conftest.py
tests/unit/: test_outline.py
(+71 files in other folders)
