[tool.poetry]
name = "lura-plugins"
version = "0.0.1"
description = ""
authors = ["adama <adhambek.otabekov.post@gmail.com>"]
readme = "README.md"
packages = [{include = "lura_plugins"}]

[tool.poetry.dependencies]
python = "^3.11"
plug = {path = "/home/adama/code/plug"}
gizmo = {path = "/home/adama/code/gizmo"}
tables = {path = "/home/adama/code/tables"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
