[tool.poetry]
name = "Quickmark"
version = "0.0.1"
description = "A quickmarker"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
tables = {git = "https://github.com/aotabekov91/tables", branch="main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
